@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,28 +16,55 @@
 
 package org.springframework.boot.build.bom;
 
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
+import javax.inject.Inject;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.transform.TransformerFactory;
+import javax.xml.transform.dom.DOMSource;
+import javax.xml.transform.stream.StreamResult;
+import javax.xml.xpath.XPath;
+import javax.xml.xpath.XPathConstants;
+import javax.xml.xpath.XPathFactory;
 
 import groovy.lang.Closure;
 import groovy.lang.GroovyObjectSupport;
 import org.apache.maven.artifact.versioning.InvalidVersionSpecificationException;
 import org.apache.maven.artifact.versioning.VersionRange;
+import org.gradle.api.Action;
+import org.gradle.api.GradleException;
 import org.gradle.api.InvalidUserCodeException;
 import org.gradle.api.InvalidUserDataException;
+import org.gradle.api.Project;
+import org.gradle.api.Task;
+import org.gradle.api.artifacts.Configuration;
 import org.gradle.api.artifacts.dsl.DependencyHandler;
+import org.gradle.api.model.ObjectFactory;
 import org.gradle.api.plugins.JavaPlatformPlugin;
-import org.gradle.util.ConfigureUtil;
+import org.gradle.api.publish.maven.tasks.GenerateMavenPom;
+import org.gradle.api.tasks.Sync;
+import org.gradle.api.tasks.TaskExecutionException;
+import org.w3c.dom.Document;
+import org.w3c.dom.NodeList;
 
+import org.springframework.boot.build.DeployedPlugin;
 import org.springframework.boot.build.bom.Library.Exclusion;
 import org.springframework.boot.build.bom.Library.Group;
+import org.springframework.boot.build.bom.Library.LibraryVersion;
 import org.springframework.boot.build.bom.Library.Module;
 import org.springframework.boot.build.bom.Library.ProhibitedVersion;
 import org.springframework.boot.build.bom.bomr.version.DependencyVersion;
+import org.springframework.boot.build.mavenplugin.MavenExec;
+import org.springframework.util.FileCopyUtils;
 
 /**
  * DSL extensions for {@link BomPlugin}.
@@ -52,20 +79,24 @@ public class BomExtension {
 
 	private final List<Library> libraries = new ArrayList<>();
 
-	private final UpgradeHandler upgradeHandler = new UpgradeHandler();
+	private final UpgradeHandler upgradeHandler;
 
 	private final DependencyHandler dependencyHandler;
 
-	public BomExtension(DependencyHandler dependencyHandler) {
+	private final Project project;
+
+	public BomExtension(DependencyHandler dependencyHandler, Project project) {
 		this.dependencyHandler = dependencyHandler;
+		this.upgradeHandler = project.getObjects().newInstance(UpgradeHandler.class);
+		this.project = project;
 	}
 
 	public List<Library> getLibraries() {
 		return this.libraries;
 	}
 
-	public void upgrade(Closure<?> closure) {
-		ConfigureUtil.configure(closure, this.upgradeHandler);
+	public void upgrade(Action<UpgradeHandler> action) {
+		action.execute(this.upgradeHandler);
 	}
 
 	public Upgrade getUpgrade() {
@@ -73,11 +104,55 @@ public class BomExtension {
 				this.upgradeHandler.gitHub.repository, this.upgradeHandler.gitHub.issueLabels));
 	}
 
-	public void library(String name, String version, Closure<?> closure) {
-		LibraryHandler libraryHandler = new LibraryHandler();
-		ConfigureUtil.configure(closure, libraryHandler);
-		addLibrary(new Library(name, DependencyVersion.parse(version), libraryHandler.groups,
-				libraryHandler.prohibitedVersions));
+	public void library(String name, Action<LibraryHandler> action) {
+		library(name, null, action);
+	}
+
+	public void library(String name, String version, Action<LibraryHandler> action) {
+		ObjectFactory objects = this.project.getObjects();
+		LibraryHandler libraryHandler = objects.newInstance(LibraryHandler.class, (version != null) ? version : "");
+		action.execute(libraryHandler);
+		LibraryVersion libraryVersion = new LibraryVersion(DependencyVersion.parse(libraryHandler.version));
+		addLibrary(new Library(name, libraryVersion, libraryHandler.groups, libraryHandler.prohibitedVersions));
+	}
+
+	public void effectiveBomArtifact() {
+		Configuration effectiveBomConfiguration = this.project.getConfigurations().create("effectiveBom");
+		this.project.getTasks()
+			.matching((task) -> task.getName().equals(DeployedPlugin.GENERATE_POM_TASK_NAME))
+			.all((task) -> {
+				Sync syncBom = this.project.getTasks().create("syncBom", Sync.class);
+				syncBom.dependsOn(task);
+				File generatedBomDir = new File(this.project.getBuildDir(), "generated/bom");
+				syncBom.setDestinationDir(generatedBomDir);
+				syncBom.from(((GenerateMavenPom) task).getDestination(), (pom) -> pom.rename((name) -> "pom.xml"));
+				try {
+					String settingsXmlContent = FileCopyUtils
+						.copyToString(new InputStreamReader(
+								getClass().getClassLoader().getResourceAsStream("effective-bom-settings.xml"),
+								StandardCharsets.UTF_8))
+						.replace("localRepositoryPath",
+								new File(this.project.getBuildDir(), "local-m2-repository").getAbsolutePath());
+					syncBom.from(this.project.getResources().getText().fromString(settingsXmlContent),
+							(settingsXml) -> settingsXml.rename((name) -> "settings.xml"));
+				}
+				catch (IOException ex) {
+					throw new GradleException("Failed to prepare settings.xml", ex);
+				}
+				MavenExec generateEffectiveBom = this.project.getTasks()
+					.create("generateEffectiveBom", MavenExec.class);
+				generateEffectiveBom.setProjectDir(generatedBomDir);
+				File effectiveBom = new File(this.project.getBuildDir(),
+						"generated/effective-bom/" + this.project.getName() + "-effective-bom.xml");
+				generateEffectiveBom.args("--settings", "settings.xml", "help:effective-pom",
+						"-Doutput=" + effectiveBom);
+				generateEffectiveBom.dependsOn(syncBom);
+				generateEffectiveBom.getOutputs().file(effectiveBom);
+				generateEffectiveBom.doLast(new StripUnrepeatableOutputAction(effectiveBom));
+				this.project.getArtifacts()
+					.add(effectiveBomConfiguration.getName(), effectiveBom,
+							(artifact) -> artifact.builtBy(generateEffectiveBom));
+			});
 	}
 
 	private String createDependencyNotation(String groupId, String artifactId, DependencyVersion version) {
@@ -88,13 +163,18 @@ public class BomExtension {
 		return this.properties;
 	}
 
-	String getArtifactVersionProperty(String groupId, String artifactId) {
-		String coordinates = groupId + ":" + artifactId;
+	String getArtifactVersionProperty(String groupId, String artifactId, String classifier) {
+		String coordinates = groupId + ":" + artifactId + ":" + classifier;
 		return this.artifactVersionProperties.get(coordinates);
 	}
 
 	private void putArtifactVersionProperty(String groupId, String artifactId, String versionProperty) {
-		String coordinates = groupId + ":" + artifactId;
+		putArtifactVersionProperty(groupId, artifactId, null, versionProperty);
+	}
+
+	private void putArtifactVersionProperty(String groupId, String artifactId, String classifier,
+			String versionProperty) {
+		String coordinates = groupId + ":" + artifactId + ":" + ((classifier != null) ? classifier : "");
 		String existing = this.artifactVersionProperties.putIfAbsent(coordinates, versionProperty);
 		if (existing != null) {
 			throw new InvalidUserDataException("Cannot put version property for '" + coordinates
@@ -104,16 +184,21 @@ public class BomExtension {
 
 	private void addLibrary(Library library) {
 		this.libraries.add(library);
-		this.properties.put(library.getVersionProperty(), library.getVersion());
+		String versionProperty = library.getVersionProperty();
+		if (versionProperty != null) {
+			this.properties.put(versionProperty, library.getVersion().getVersion());
+		}
 		for (Group group : library.getGroups()) {
 			for (Module module : group.getModules()) {
-				this.putArtifactVersionProperty(group.getId(), module.getName(), library.getVersionProperty());
-				this.dependencyHandler.getConstraints().add(JavaPlatformPlugin.API_CONFIGURATION_NAME,
-						createDependencyNotation(group.getId(), module.getName(), library.getVersion()));
+				putArtifactVersionProperty(group.getId(), module.getName(), module.getClassifier(), versionProperty);
+				this.dependencyHandler.getConstraints()
+					.add(JavaPlatformPlugin.API_CONFIGURATION_NAME, createDependencyNotation(group.getId(),
+							module.getName(), library.getVersion().getVersion()));
 			}
 			for (String bomImport : group.getBoms()) {
-				this.putArtifactVersionProperty(group.getId(), bomImport, library.getVersionProperty());
-				String bomDependency = createDependencyNotation(group.getId(), bomImport, library.getVersion());
+				putArtifactVersionProperty(group.getId(), bomImport, versionProperty);
+				String bomDependency = createDependencyNotation(group.getId(), bomImport,
+						library.getVersion().getVersion());
 				this.dependencyHandler.add(JavaPlatformPlugin.API_CONFIGURATION_NAME,
 						this.dependencyHandler.platform(bomDependency));
 				this.dependencyHandler.add(BomPlugin.API_ENFORCED_CONFIGURATION_NAME,
@@ -128,28 +213,75 @@ public class BomExtension {
 
 		private final List<ProhibitedVersion> prohibitedVersions = new ArrayList<>();
 
-		public void group(String id, Closure<?> closure) {
+		private String version;
+
+		@Inject
+		public LibraryHandler(String version) {
+			this.version = version;
+		}
+
+		public void version(String version) {
+			this.version = version;
+		}
+
+		public void group(String id, Action<GroupHandler> action) {
 			GroupHandler groupHandler = new GroupHandler(id);
-			ConfigureUtil.configure(closure, groupHandler);
+			action.execute(groupHandler);
 			this.groups
-					.add(new Group(groupHandler.id, groupHandler.modules, groupHandler.plugins, groupHandler.imports));
+				.add(new Group(groupHandler.id, groupHandler.modules, groupHandler.plugins, groupHandler.imports));
 		}
 
-		public void prohibit(String range, Closure<?> closure) {
-			ProhibitedVersionHandler prohibitedVersionHandler = new ProhibitedVersionHandler();
-			ConfigureUtil.configure(closure, prohibitedVersionHandler);
-			try {
-				this.prohibitedVersions.add(new ProhibitedVersion(VersionRange.createFromVersionSpec(range),
-						prohibitedVersionHandler.reason));
-			}
-			catch (InvalidVersionSpecificationException ex) {
-				throw new InvalidUserCodeException("Invalid version range", ex);
-			}
+		public void prohibit(Action<ProhibitedHandler> action) {
+			ProhibitedHandler handler = new ProhibitedHandler();
+			action.execute(handler);
+			this.prohibitedVersions.add(new ProhibitedVersion(handler.versionRange, handler.startsWith,
+					handler.endsWith, handler.contains, handler.reason));
 		}
 
-		public static class ProhibitedVersionHandler {
+		public static class ProhibitedHandler {
 
 			private String reason;
+
+			private final List<String> startsWith = new ArrayList<>();
+
+			private final List<String> endsWith = new ArrayList<>();
+
+			private final List<String> contains = new ArrayList<>();
+
+			private VersionRange versionRange;
+
+			public void versionRange(String versionRange) {
+				try {
+					this.versionRange = VersionRange.createFromVersionSpec(versionRange);
+				}
+				catch (InvalidVersionSpecificationException ex) {
+					throw new InvalidUserCodeException("Invalid version range", ex);
+				}
+			}
+
+			public void startsWith(String startsWith) {
+				this.startsWith.add(startsWith);
+			}
+
+			public void startsWith(Collection<String> startsWith) {
+				this.startsWith.addAll(startsWith);
+			}
+
+			public void endsWith(String endsWith) {
+				this.endsWith.add(endsWith);
+			}
+
+			public void endsWith(Collection<String> endsWith) {
+				this.endsWith.addAll(endsWith);
+			}
+
+			public void contains(String contains) {
+				this.contains.add(contains);
+			}
+
+			public void contains(List<String> contains) {
+				this.contains.addAll(contains);
+			}
 
 			public void because(String because) {
 				this.reason = because;
@@ -173,8 +305,8 @@ public class BomExtension {
 
 			public void setModules(List<Object> modules) {
 				this.modules = modules.stream()
-						.map((input) -> (input instanceof Module) ? (Module) input : new Module((String) input))
-						.collect(Collectors.toList());
+					.map((input) -> (input instanceof Module module) ? module : new Module((String) input))
+					.toList();
 			}
 
 			public void setImports(List<String> imports) {
@@ -188,21 +320,35 @@ public class BomExtension {
 			public Object methodMissing(String name, Object args) {
 				if (args instanceof Object[] && ((Object[]) args).length == 1) {
 					Object arg = ((Object[]) args)[0];
-					if (arg instanceof Closure) {
-						ExclusionHandler exclusionHandler = new ExclusionHandler();
-						ConfigureUtil.configure((Closure<?>) arg, exclusionHandler);
-						return new Module(name, exclusionHandler.exclusions);
+					if (arg instanceof Closure<?> closure) {
+						ModuleHandler moduleHandler = new ModuleHandler();
+						closure.setResolveStrategy(Closure.DELEGATE_FIRST);
+						closure.setDelegate(moduleHandler);
+						closure.call(moduleHandler);
+						return new Module(name, moduleHandler.type, moduleHandler.classifier, moduleHandler.exclusions);
 					}
 				}
-				throw new InvalidUserDataException("Invalid exclusion configuration for module '" + name + "'");
+				throw new InvalidUserDataException("Invalid configuration for module '" + name + "'");
 			}
 
-			public class ExclusionHandler {
+			public class ModuleHandler {
 
 				private final List<Exclusion> exclusions = new ArrayList<>();
 
+				private String type;
+
+				private String classifier;
+
 				public void exclude(Map<String, String> exclusion) {
 					this.exclusions.add(new Exclusion(exclusion.get("group"), exclusion.get("module")));
+				}
+
+				public void setType(String type) {
+					this.type = type;
+				}
+
+				public void setClassifier(String classifier) {
+					this.classifier = classifier;
 				}
 
 			}
@@ -221,8 +367,8 @@ public class BomExtension {
 			this.upgradePolicy = upgradePolicy;
 		}
 
-		public void gitHub(Closure<?> closure) {
-			ConfigureUtil.configure(closure, this.gitHub);
+		public void gitHub(Action<GitHubHandler> action) {
+			action.execute(this.gitHub);
 		}
 
 	}
@@ -276,7 +422,7 @@ public class BomExtension {
 
 		private String repository = "spring-boot";
 
-		private List<String> issueLabels;
+		private final List<String> issueLabels;
 
 		private GitHub(String organization, String repository, List<String> issueLabels) {
 			this.organization = organization;
@@ -294,6 +440,41 @@ public class BomExtension {
 
 		public List<String> getIssueLabels() {
 			return this.issueLabels;
+		}
+
+	}
+
+	private static final class StripUnrepeatableOutputAction implements Action<Task> {
+
+		private final File effectiveBom;
+
+		private StripUnrepeatableOutputAction(File xmlFile) {
+			this.effectiveBom = xmlFile;
+		}
+
+		@Override
+		public void execute(Task task) {
+			try {
+				Document document = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(this.effectiveBom);
+				XPath xpath = XPathFactory.newInstance().newXPath();
+				NodeList comments = (NodeList) xpath.evaluate("//comment()", document, XPathConstants.NODESET);
+				for (int i = 0; i < comments.getLength(); i++) {
+					org.w3c.dom.Node comment = comments.item(i);
+					comment.getParentNode().removeChild(comment);
+				}
+				org.w3c.dom.Node build = (org.w3c.dom.Node) xpath.evaluate("/project/build", document,
+						XPathConstants.NODE);
+				build.getParentNode().removeChild(build);
+				org.w3c.dom.Node reporting = (org.w3c.dom.Node) xpath.evaluate("/project/reporting", document,
+						XPathConstants.NODE);
+				reporting.getParentNode().removeChild(reporting);
+				TransformerFactory.newInstance()
+					.newTransformer()
+					.transform(new DOMSource(document), new StreamResult(this.effectiveBom));
+			}
+			catch (Exception ex) {
+				throw new TaskExecutionException(task, ex);
+			}
 		}
 
 	}
