@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,11 +16,8 @@
 
 package org.springframework.boot.autoconfigure.jms.activemq;
 
-import java.util.stream.Collectors;
-
-import javax.jms.ConnectionFactory;
-import javax.transaction.TransactionManager;
-
+import jakarta.jms.ConnectionFactory;
+import jakarta.transaction.TransactionManager;
 import org.apache.activemq.ActiveMQConnectionFactory;
 import org.apache.activemq.ActiveMQXAConnectionFactory;
 
@@ -39,6 +36,7 @@ import org.springframework.context.annotation.Primary;
  *
  * @author Phillip Webb
  * @author Aurélien Leboulanger
+ * @author Eddú Meléndez
  */
 @Configuration(proxyBeanMethods = false)
 @ConditionalOnClass(TransactionManager.class)
@@ -49,11 +47,11 @@ class ActiveMQXAConnectionFactoryConfiguration {
 	@Primary
 	@Bean(name = { "jmsConnectionFactory", "xaJmsConnectionFactory" })
 	ConnectionFactory jmsConnectionFactory(ActiveMQProperties properties,
-			ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers, XAConnectionFactoryWrapper wrapper)
-			throws Exception {
+			ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers, XAConnectionFactoryWrapper wrapper,
+			ActiveMQConnectionDetails connectionDetails) throws Exception {
 		ActiveMQXAConnectionFactory connectionFactory = new ActiveMQConnectionFactoryFactory(properties,
-				factoryCustomizers.orderedStream().collect(Collectors.toList()))
-						.createConnectionFactory(ActiveMQXAConnectionFactory.class);
+				factoryCustomizers.orderedStream().toList(), connectionDetails)
+			.createConnectionFactory(ActiveMQXAConnectionFactory.class);
 		return wrapper.wrapConnectionFactory(connectionFactory);
 	}
 
@@ -61,10 +59,11 @@ class ActiveMQXAConnectionFactoryConfiguration {
 	@ConditionalOnProperty(prefix = "spring.activemq.pool", name = "enabled", havingValue = "false",
 			matchIfMissing = true)
 	ActiveMQConnectionFactory nonXaJmsConnectionFactory(ActiveMQProperties properties,
-			ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers) {
-		return new ActiveMQConnectionFactoryFactory(properties,
-				factoryCustomizers.orderedStream().collect(Collectors.toList()))
-						.createConnectionFactory(ActiveMQConnectionFactory.class);
+			ObjectProvider<ActiveMQConnectionFactoryCustomizer> factoryCustomizers,
+			ActiveMQConnectionDetails connectionDetails) {
+		return new ActiveMQConnectionFactoryFactory(properties, factoryCustomizers.orderedStream().toList(),
+				connectionDetails)
+			.createConnectionFactory(ActiveMQConnectionFactory.class);
 	}
 
 }
