@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,14 +17,11 @@
 package org.springframework.boot.autoconfigure.web.servlet.error;
 
 import java.nio.charset.StandardCharsets;
-import java.util.Date;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import javax.servlet.Servlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
+import jakarta.servlet.Servlet;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
@@ -33,7 +30,7 @@ import org.springframework.beans.BeansException;
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.beans.factory.config.BeanFactoryPostProcessor;
 import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
-import org.springframework.boot.autoconfigure.AutoConfigureBefore;
+import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionMessage;
 import org.springframework.boot.autoconfigure.condition.ConditionOutcome;
@@ -47,8 +44,9 @@ import org.springframework.boot.autoconfigure.condition.SearchStrategy;
 import org.springframework.boot.autoconfigure.condition.SpringBootCondition;
 import org.springframework.boot.autoconfigure.template.TemplateAvailabilityProvider;
 import org.springframework.boot.autoconfigure.template.TemplateAvailabilityProviders;
-import org.springframework.boot.autoconfigure.web.ResourceProperties;
 import org.springframework.boot.autoconfigure.web.ServerProperties;
+import org.springframework.boot.autoconfigure.web.WebProperties;
+import org.springframework.boot.autoconfigure.web.WebProperties.Resources;
 import org.springframework.boot.autoconfigure.web.servlet.DispatcherServletPath;
 import org.springframework.boot.autoconfigure.web.servlet.WebMvcAutoConfiguration;
 import org.springframework.boot.autoconfigure.web.servlet.WebMvcProperties;
@@ -74,21 +72,21 @@ import org.springframework.web.servlet.view.BeanNameViewResolver;
 import org.springframework.web.util.HtmlUtils;
 
 /**
- * {@link EnableAutoConfiguration Auto-configuration} to render errors via an MVC error
- * controller.
+ * {@link EnableAutoConfiguration Auto-configuration} to render errors through an MVC
+ * error controller.
  *
  * @author Dave Syer
  * @author Andy Wilkinson
  * @author Stephane Nicoll
  * @author Brian Clozel
+ * @author Scott Frederick
  * @since 1.0.0
  */
-@Configuration(proxyBeanMethods = false)
+// Load before the main WebMvcAutoConfiguration so that the error View is available
+@AutoConfiguration(before = WebMvcAutoConfiguration.class)
 @ConditionalOnWebApplication(type = Type.SERVLET)
 @ConditionalOnClass({ Servlet.class, DispatcherServlet.class })
-// Load before the main WebMvcAutoConfiguration so that the error View is available
-@AutoConfigureBefore(WebMvcAutoConfiguration.class)
-@EnableConfigurationProperties({ ServerProperties.class, ResourceProperties.class, WebMvcProperties.class })
+@EnableConfigurationProperties({ ServerProperties.class, WebMvcProperties.class })
 public class ErrorMvcAutoConfiguration {
 
 	private final ServerProperties serverProperties;
@@ -100,7 +98,7 @@ public class ErrorMvcAutoConfiguration {
 	@Bean
 	@ConditionalOnMissingBean(value = ErrorAttributes.class, search = SearchStrategy.CURRENT)
 	public DefaultErrorAttributes errorAttributes() {
-		return new DefaultErrorAttributes(this.serverProperties.getError().isIncludeException());
+		return new DefaultErrorAttributes();
 	}
 
 	@Bean
@@ -108,7 +106,7 @@ public class ErrorMvcAutoConfiguration {
 	public BasicErrorController basicErrorController(ErrorAttributes errorAttributes,
 			ObjectProvider<ErrorViewResolver> errorViewResolvers) {
 		return new BasicErrorController(errorAttributes, this.serverProperties.getError(),
-				errorViewResolvers.orderedStream().collect(Collectors.toList()));
+				errorViewResolvers.orderedStream().toList());
 	}
 
 	@Bean
@@ -122,23 +120,23 @@ public class ErrorMvcAutoConfiguration {
 	}
 
 	@Configuration(proxyBeanMethods = false)
+	@EnableConfigurationProperties({ WebProperties.class, WebMvcProperties.class })
 	static class DefaultErrorViewResolverConfiguration {
 
 		private final ApplicationContext applicationContext;
 
-		private final ResourceProperties resourceProperties;
+		private final Resources resources;
 
-		DefaultErrorViewResolverConfiguration(ApplicationContext applicationContext,
-				ResourceProperties resourceProperties) {
+		DefaultErrorViewResolverConfiguration(ApplicationContext applicationContext, WebProperties webProperties) {
 			this.applicationContext = applicationContext;
-			this.resourceProperties = resourceProperties;
+			this.resources = webProperties.getResources();
 		}
 
 		@Bean
 		@ConditionalOnBean(DispatcherServlet.class)
 		@ConditionalOnMissingBean(ErrorViewResolver.class)
 		DefaultErrorViewResolver conventionErrorViewResolver() {
-			return new DefaultErrorViewResolver(this.applicationContext, this.resourceProperties);
+			return new DefaultErrorViewResolver(this.applicationContext, this.resources);
 		}
 
 	}
@@ -206,17 +204,22 @@ public class ErrorMvcAutoConfiguration {
 			}
 			response.setContentType(TEXT_HTML_UTF8.toString());
 			StringBuilder builder = new StringBuilder();
-			Date timestamp = (Date) model.get("timestamp");
+			Object timestamp = model.get("timestamp");
 			Object message = model.get("message");
 			Object trace = model.get("trace");
 			if (response.getContentType() == null) {
 				response.setContentType(getContentType());
 			}
-			builder.append("<html><body><h1>Whitelabel Error Page</h1>").append(
-					"<p>This application has no explicit mapping for /error, so you are seeing this as a fallback.</p>")
-					.append("<div id='created'>").append(timestamp).append("</div>")
-					.append("<div>There was an unexpected error (type=").append(htmlEscape(model.get("error")))
-					.append(", status=").append(htmlEscape(model.get("status"))).append(").</div>");
+			builder.append("<html><body><h1>Whitelabel Error Page</h1>")
+				.append("<p>This application has no explicit mapping for /error, so you are seeing this as a fallback.</p>")
+				.append("<div id='created'>")
+				.append(timestamp)
+				.append("</div>")
+				.append("<div>There was an unexpected error (type=")
+				.append(htmlEscape(model.get("error")))
+				.append(", status=")
+				.append(htmlEscape(model.get("status")))
+				.append(").</div>");
 			if (message != null) {
 				builder.append("<div>").append(htmlEscape(message)).append("</div>");
 			}
@@ -289,7 +292,7 @@ public class ErrorMvcAutoConfiguration {
 			for (String errorControllerBean : errorControllerBeans) {
 				try {
 					beanFactory.getBeanDefinition(errorControllerBean)
-							.setAttribute(AutoProxyUtils.PRESERVE_TARGET_CLASS_ATTRIBUTE, Boolean.TRUE);
+						.setAttribute(AutoProxyUtils.PRESERVE_TARGET_CLASS_ATTRIBUTE, Boolean.TRUE);
 				}
 				catch (Throwable ex) {
 					// Ignore
