@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,7 +23,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.databind.JsonNode;
 
@@ -45,12 +44,15 @@ public class Image extends MappedObject {
 
 	private final String os;
 
+	private final String created;
+
 	Image(JsonNode node) {
 		super(node, MethodHandles.lookup());
 		this.digests = getDigests(getNode().at("/RepoDigests"));
 		this.config = new ImageConfig(getNode().at("/Config"));
 		this.layers = extractLayers(valueAt("/RootFS/Layers", String[].class));
 		this.os = valueAt("/Os", String.class);
+		this.created = valueAt("/Created", String.class);
 	}
 
 	private List<String> getDigests(JsonNode node) {
@@ -66,7 +68,7 @@ public class Image extends MappedObject {
 		if (layers == null) {
 			return Collections.emptyList();
 		}
-		return Collections.unmodifiableList(Arrays.stream(layers).map(LayerId::of).collect(Collectors.toList()));
+		return Arrays.stream(layers).map(LayerId::of).toList();
 	}
 
 	/**
@@ -99,6 +101,14 @@ public class Image extends MappedObject {
 	 */
 	public String getOs() {
 		return (this.os != null) ? this.os : "linux";
+	}
+
+	/**
+	 * Return the created date of the image.
+	 * @return the image created date
+	 */
+	public String getCreated() {
+		return this.created;
 	}
 
 	/**
