@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,13 +17,11 @@
 package org.springframework.boot.maven;
 
 import java.io.File;
-import java.lang.reflect.Method;
-import java.net.URL;
-import java.net.URLClassLoader;
 import java.util.List;
 import java.util.Map;
 
 import org.apache.maven.plugin.MojoExecutionException;
+import org.apache.maven.plugin.MojoFailureException;
 import org.apache.maven.plugins.annotations.Execute;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Mojo;
@@ -46,15 +44,6 @@ import org.springframework.boot.loader.tools.RunProcess;
 @Execute(phase = LifecyclePhase.TEST_COMPILE)
 public class RunMojo extends AbstractRunMojo {
 
-	private static final int EXIT_CODE_SIGINT = 130;
-
-	private static final String RESTARTER_CLASS_LOCATION = "org/springframework/boot/devtools/restart/Restarter.class";
-
-	/**
-	 * Devtools presence flag to avoid checking for it several times per execution.
-	 */
-	private Boolean hasDevtools;
-
 	/**
 	 * Whether the JVM's launch should be optimized.
 	 * @since 2.2.0
@@ -62,105 +51,34 @@ public class RunMojo extends AbstractRunMojo {
 	@Parameter(property = "spring-boot.run.optimizedLaunch", defaultValue = "true")
 	private boolean optimizedLaunch;
 
-	@Override
-	protected void logDisabledFork() {
-		super.logDisabledFork();
-		if (hasDevtools()) {
-			getLog().warn("Fork mode disabled, devtools will be disabled");
-		}
-	}
+	/**
+	 * Flag to include the test classpath when running.
+	 * @since 1.3.0
+	 */
+	@Parameter(property = "spring-boot.run.useTestClasspath", defaultValue = "false")
+	private Boolean useTestClasspath;
 
 	@Override
 	protected RunArguments resolveJvmArguments() {
 		RunArguments jvmArguments = super.resolveJvmArguments();
-		if (isFork() && this.optimizedLaunch) {
+		if (this.optimizedLaunch) {
 			jvmArguments.getArgs().addFirst("-XX:TieredStopAtLevel=1");
-			if (!isJava13OrLater()) {
-				jvmArguments.getArgs().addFirst("-Xverify:none");
-			}
 		}
 		return jvmArguments;
 	}
 
-	private boolean isJava13OrLater() {
-		for (Method method : String.class.getMethods()) {
-			if (method.getName().equals("stripIndent")) {
-				return true;
-			}
-		}
-		return false;
+	@Override
+	protected void run(JavaProcessExecutor processExecutor, File workingDirectory, List<String> args,
+			Map<String, String> environmentVariables) throws MojoExecutionException, MojoFailureException {
+		processExecutor
+			.withRunProcessCustomizer(
+					(runProcess) -> Runtime.getRuntime().addShutdownHook(new Thread(new RunProcessKiller(runProcess))))
+			.run(workingDirectory, args, environmentVariables);
 	}
 
 	@Override
-	protected void runWithForkedJvm(File workingDirectory, List<String> args, Map<String, String> environmentVariables)
-			throws MojoExecutionException {
-		int exitCode = forkJvm(workingDirectory, args, environmentVariables);
-		if (exitCode == 0 || exitCode == EXIT_CODE_SIGINT) {
-			return;
-		}
-		throw new MojoExecutionException("Application finished with exit code: " + exitCode);
-	}
-
-	private int forkJvm(File workingDirectory, List<String> args, Map<String, String> environmentVariables)
-			throws MojoExecutionException {
-		try {
-			RunProcess runProcess = new RunProcess(workingDirectory, getJavaExecutable());
-			Runtime.getRuntime().addShutdownHook(new Thread(new RunProcessKiller(runProcess)));
-			return runProcess.run(true, args, environmentVariables);
-		}
-		catch (Exception ex) {
-			throw new MojoExecutionException("Could not exec java", ex);
-		}
-	}
-
-	@Override
-	protected void runWithMavenJvm(String startClassName, String... arguments) throws MojoExecutionException {
-		IsolatedThreadGroup threadGroup = new IsolatedThreadGroup(startClassName);
-		Thread launchThread = new Thread(threadGroup, new LaunchRunner(startClassName, arguments), "main");
-		launchThread.setContextClassLoader(new URLClassLoader(getClassPathUrls()));
-		launchThread.start();
-		join(threadGroup);
-		threadGroup.rethrowUncaughtException();
-	}
-
-	private void join(ThreadGroup threadGroup) {
-		boolean hasNonDaemonThreads;
-		do {
-			hasNonDaemonThreads = false;
-			Thread[] threads = new Thread[threadGroup.activeCount()];
-			threadGroup.enumerate(threads);
-			for (Thread thread : threads) {
-				if (thread != null && !thread.isDaemon()) {
-					try {
-						hasNonDaemonThreads = true;
-						thread.join();
-					}
-					catch (InterruptedException ex) {
-						Thread.currentThread().interrupt();
-					}
-				}
-			}
-		}
-		while (hasNonDaemonThreads);
-	}
-
-	private boolean hasDevtools() {
-		if (this.hasDevtools == null) {
-			this.hasDevtools = checkForDevtools();
-		}
-		return this.hasDevtools;
-	}
-
-	private boolean checkForDevtools() {
-		try {
-			URL[] urls = getClassPathUrls();
-			try (URLClassLoader classLoader = new URLClassLoader(urls)) {
-				return (classLoader.findResource(RESTARTER_CLASS_LOCATION) != null);
-			}
-		}
-		catch (Exception ex) {
-			return false;
-		}
+	protected boolean isUseTestClasspath() {
+		return this.useTestClasspath;
 	}
 
 	private static final class RunProcessKiller implements Runnable {
